docs: add user comments on every route for documentation
